syntax = "proto3";

package User;
option go_package="./proto";

message Users {
  int64 Id       =1;
  string Name     =2;
  string Mobile  =3;
  string Password =4;
  string Avatar  =5;
  int64    Status  =6;
  string Version =7;
  string CreatedAt =8;
  string UpdatedAt =9;
  string DeletedAt =10;
}

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

message AddUserRequest {
  string Name = 1;
  string   Mobile = 2;
  string  Password = 3;
  string  Avatar = 4;
}

message AddUserResponse {
  bool Success = 1;
}

message UpdateUserRequest {
  int64 UserId = 1;
  string   Mobile = 2;
}

message UpdateUserResponse {
  bool Success = 1;
}

message DeleteUserRequest {
  int64 UserId = 1;
}

message DeleteUserResponse {
  bool Success = 1;
}

message GetUserRequest {
  int64 UserId = 1;
}

message GetUserResponse {
  int64 Id       =1;
  string Name     =2;
  string Mobile  =3;
  string Avatar  =4;
  int64  Status  =5;
  string Version =6;
}

message GetUserListRequest {
  string Name = 1;
  string   Mobile = 2;
  string  Password = 3;
  string  Avatar = 4;
}

message GetUserListResponse {
  bool Success = 1;
}

message UserList {
  int64 Id       =1;
  string Name     =2;
  string Mobile  =3;
  string Avatar  =4;
  int64  Status  =5;
  string Version =6;
  string CreatedAt =7;
}

message GetUserOrderRequest {
  int64 UserId       =1;
}

message GetUserOrderResponse {
  int64 UserId       =1;
  string UserName     =2;
  string UserMobile  =3;
  string OrderSn  =4;
  int64 OrderStatus  =5;
  float OrderAmount  =6;
}

service User {
  rpc Ping(Request) returns(Response);
  rpc AddUser(AddUserRequest) returns(AddUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse);
  rpc GetUser(GetUserRequest) returns(GetUserResponse);
  rpc GetUserList(GetUserListRequest) returns(GetUserListResponse);
  rpc GetUserOrder(GetUserOrderRequest) returns(GetUserOrderResponse);
}
